--- a/public/04-delivery-1.html
+++ b/public/04-delivery-1.html
@@ -408,42 +408,42 @@
 												</div>
 											</div>
 										</div>
-										<div class="payment__slider-col col-md-auto">
+										<div class="slider-col col-md-auto">
 											<div class="swiper-container payment-slider-js">
 												<div class="swiper-wrapper">
 													<div class="swiper-slide">
-														<div class="payment__item">
-															<div class="payment__bg"><img loading="lazy" src="img/@2x/payment-slider-1.jpg" alt=""/>
+														<div class="slider-col__item">
+															<div class="slider-col__bg"><img loading="lazy" src="img/@2x/payment-slider-1.jpg" alt=""/>
 															</div>
-															<div class="payment__s-content">
-																<div class="payment__s-title">Покупай в кредит!
+															<div class="slider-col__s-content">
+																<div class="slider-col__s-title">Покупай в кредит!
 																</div>
-																<div class="payment__s-descr">В нашем магазине можно приобрести товары в рассрочку или кредит без первоначального взноса и переплат через Почта Банк.
-																</div><a class="payment__s-btn" href="#">узнать подробнее</a>
+																<div class="slider-col__s-descr">В нашем магазине можно приобрести товары в рассрочку или кредит без первоначального взноса и переплат через Почта Банк.
+																</div><a class="slider-col__s-btn" href="#">узнать подробнее</a>
 															</div>
 														</div>
 													</div>
 													<div class="swiper-slide">
-														<div class="payment__item">
-															<div class="payment__bg"><img loading="lazy" src="img/@2x/payment-slider-1.jpg" alt=""/>
+														<div class="slider-col__item">
+															<div class="slider-col__bg"><img loading="lazy" src="img/@2x/payment-slider-1.jpg" alt=""/>
 															</div>
-															<div class="payment__s-content">
-																<div class="payment__s-title">Покупай в кредит!
+															<div class="slider-col__s-content">
+																<div class="slider-col__s-title">Покупай в кредит!
 																</div>
-																<div class="payment__s-descr">В нашем магазине можно приобрести товары в рассрочку или кредит без первоначального взноса и переплат через Почта Банк.
-																</div><a class="payment__s-btn" href="#">узнать подробнее</a>
+																<div class="slider-col__s-descr">В нашем магазине можно приобрести товары в рассрочку или кредит без первоначального взноса и переплат через Почта Банк.
+																</div><a class="slider-col__s-btn" href="#">узнать подробнее</a>
 															</div>
 														</div>
 													</div>
 													<div class="swiper-slide">
-														<div class="payment__item">
-															<div class="payment__bg"><img loading="lazy" src="img/@2x/payment-slider-1.jpg" alt=""/>
+														<div class="slider-col__item">
+															<div class="slider-col__bg"><img loading="lazy" src="img/@2x/payment-slider-1.jpg" alt=""/>
 															</div>
-															<div class="payment__s-content">
-																<div class="payment__s-title">Покупай в кредит!
+															<div class="slider-col__s-content">
+																<div class="slider-col__s-title">Покупай в кредит!
 																</div>
-																<div class="payment__s-descr">В нашем магазине можно приобрести товары в рассрочку или кредит без первоначального взноса и переплат через Почта Банк.
-																</div><a class="payment__s-btn" href="#">узнать подробнее</a>
+																<div class="slider-col__s-descr">В нашем магазине можно приобрести товары в рассрочку или кредит без первоначального взноса и переплат через Почта Банк.
+																</div><a class="slider-col__s-btn" href="#">узнать подробнее</a>
 															</div>
 														</div>
 													</div>
