killed all sm pages

--- a/public/012-map.html
+++ b/public/012-map.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title>010-articals</title>
+		<title>012-map</title>
 		<meta name="description" content="о чем страница">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,  shrink-to-fit=no">
@@ -11,7 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 		<link href="css/main.min.css" rel="stylesheet"/>
 	</head>
-	<body data-bg="010.png">
+	<body data-bg="011.png">
 		<div class="main-wrapper">
 			<div class="menu-mobile menu-mobile--js d-xl-none">
 				<div class="toggle-menu-mobile toggle-menu-mobile--js"><span></span>
@@ -185,122 +185,127 @@
 					<nav>
 						<ol class="breadcrumb">
 							<li class="breadcrumb-item"><a href="/"><span>Главная</span></a></li>
-							<li class="breadcrumb-item active"><a href="#"><span>Статьи</span></a></li>
+							<li class="breadcrumb-item active"><a href="#"><span>Карта сайта</span></a></li>
 						</ol>
 					</nav>
-					<h1>Статьи</h1>
+					<h1>Карта сайта</h1>
 				</div>
 			</div>
-			<!--+sWarranty()-->
-			<!-- start sArticals-->
-			<div class="sArticals section" id="sArticals">
+			<!-- start sMap-->
+			<div class="sMap section" id="sMap">
 				<div class="container">
-					<div class="sArticals__row row">
-						<div class="col-sm-6 col-lg-4">
-							<div class="sArticalsitem"><a class="sArticalsitem__img" href="#"><img loading="lazy" src="img/@2x/sArticals-1.jpg" alt=""/><span class="sArticalsitem__date">12 февраля 2021</span></a><a class="sArticalsitem__title" href="#">Как правильно выбрать холодильник</a>
-								<div class="sArticalsitem__descr">Бензиновый мотобур относится к узкоспециализированным инструментам. Он применяется для бурения почвы и льда. Само по себе устройство не ново, но тем не менее на современном рынке
-								</div><a class="sArticalsitem__read-more" href="#">Читать подробнее</a>
+					<div class="sMap__row row">
+						<div class="sMap__bm-col col-lg-3">
+							<div class="sMap__bold-menu">
+								<ul>
+									<li><a href="#">Доставка и оплата</a></li>
+									<li><a href="#">Акции</a></li>
+									<li><a href="#">Рассрочка и кредит</a></li>
+									<li><a href="#">Обмен и возврат</a></li>
+									<li><a href="#">Гарантия</a></li>
+									<li><a href="#">Статьи</a></li>
+									<li><a href="#">Карта сайта</a></li>
+									<li><a href="#">Вакансии</a></li>
+									<li><a href="#">Сотрудничество</a></li>
+									<li><a href="#">Контакты</a></li>
+									<li><a href="#">Вход для партнеров</a></li>
+								</ul>
 							</div>
 						</div>
-						<div class="col-sm-6 col-lg-4">
-							<div class="sArticalsitem"><a class="sArticalsitem__img" href="#"><img loading="lazy" src="img/@2x/sArticals-2.jpg" alt=""/><span class="sArticalsitem__date">12 февраля 2021</span></a><a class="sArticalsitem__title" href="#">Миксеры: выбираем правильный</a>
-								<div class="sArticalsitem__descr">Бензиновый мотобур относится к узкоспециализированным инструментам. Он применяется для бурения почвы и льда. Само по себе устройство не ново, но тем не менее на современном рынке
-								</div><a class="sArticalsitem__read-more" href="#">Читать подробнее</a>
+						<div class="col">
+							<div class="sMap__sub-row row">
+								<div class="col-sm-6 col-md-4"><a class="sMap__title" href="#">Встраиваемая техника</a>
+									<div class="sMap__menu">
+										<ul>
+											<li><a href="#">Варочные панели</a></li>
+											<li><a href="#">Панели домино</a></li>
+											<li><a href="#">Комбинированная панель</a></li>
+											<li><a href="#">Газовые панели</a></li>
+											<li><a href="#">Индукционные панели</a></li>
+											<li><a href="#">Винные шкафы</a></li>
+											<li><a href="#">Вытяжки</a></li>
+											<li><a href="#">Вытяжки в столешницу</a></li>
+											<li><a href="#">Вытяжки в шкаф</a></li>
+											<li><a href="#">Духовые шкафы</a></li>
+											<li><a href="#">Газовый духовой шкаф</a></li>
+											<li><a href="#">Компактный духовой шкаф</a></li>
+											<li><a href="#">Электрический духовой шкаф</a></li>
+											<li><a href="#">Кофемашины</a></li>
+											<li><a href="#">Микроволновые печи</a></li>
+											<li><a href="#">Морозильные камеры</a></li>
+											<li><a href="#">Посудомоечные машины</a></li>
+											<li><a href="#">Стиральные машины</a></li>
+											<li><a href="#">Холодильники</a></li>
+											<li><a href="#">Двухдверные холодильники</a></li>
+											<li><a href="#">Однокамерные холодильники</a></li>
+											<li><a href="#">Шкафы для подогрева посуды</a></li>
+										</ul>
+									</div>
+								</div>
+								<div class="col-sm-6 col-md-4"><a class="sMap__title" href="#">Крупная бытовая техника</a>
+									<div class="sMap__menu">
+										<ul>
+											<li><a href="#">Винные шкафы</a></li>
+											<li><a href="#">Вытяжки</a></li>
+											<li><a href="#">Вытяжки под шкаф</a></li>
+											<li><a href="#">Каминные вытяжки</a></li>
+											<li><a href="#">Островные вытяжки</a></li>
+											<li><a href="#">Пристенные вытяжки</a></li>
+											<li><a href="#">Кухонные плиты</a></li>
+											<li><a href="#">Газовые плиты</a></li>
+											<li><a href="#">Комбинированные плиты</a></li>
+											<li><a href="#">Плиты электрические стеклокерамические настольные</a></li>
+											<li><a href="#">Электрические плиты</a></li>
+											<li><a href="#">Морозильные камеры</a></li>
+											<li><a href="#">Посудомоечные машины</a></li>
+											<li><a href="#">Посудомоечные машины напольные</a></li>
+											<li><a href="#">Стиральные машины</a></li>
+											<li><a href="#">Вертикальные стиральные машины</a></li>
+											<li><a href="#">Фронтальные стиральные машины</a></li>
+											<li><a href="#">Сушильные автоматы</a></li>
+											<li><a href="#">Холодильники</a></li>
+											<li><a href="#">Двухкамерные холодильники</a></li>
+											<li><a href="#">Морозильные лари</a></li>
+											<li><a href="#">Холодильники Side by Side</a></li>
+										</ul>
+									</div>
+								</div>
+								<div class="col-sm-6 col-md-4"><a class="sMap__title" href="#">Мелкая кухонная техника</a>
+									<div class="sMap__menu">
+										<ul>
+											<li><a href="#">Блендеры</a></li>
+											<li><a href="#">Блендеры стационарные</a></li>
+											<li><a href="#">Вафельницы</a></li>
+											<li><a href="#">Кофеварки</a></li>
+											<li><a href="#">Капельные кофеварки</a></li>
+											<li><a href="#">Рожковые кофеварки</a></li>
+											<li><a href="#">Кофемолки</a></li>
+											<li><a href="#">Кухонные весы</a></li>
+											<li><a href="#">Электрические кухонные вес</a></li>
+											<li><a href="#">Кухонные комбайны</a></li>
+											<li><a href="#">Микроволновые печи</a></li>
+											<li><a href="#">Миксеры</a></li>
+											<li><a href="#">Мультиварки</a></li>
+											<li><a href="#">Мясорубки</a></li>
+											<li><a href="#">Электромясорубки</a></li>
+											<li><a href="#">Соковыжималки</a></li>
+											<li><a href="#">Шнековые соковыжималки</a></li>
+											<li><a href="#">Тостеры</a></li>
+											<li><a href="#">Чайники электрические</a></li>
+											<li><a href="#">Сантехника для кухни</a></li>
+											<li><a href="#">Измельчители пищевых отходов</a></li>
+											<li><a href="#">Кухонные мойки</a></li>
+											<li><a href="#">Сифоны для кухонных моек</a></li>
+											<li><a href="#">Смесители для моек</a></li>
+										</ul>
+									</div>
+								</div>
 							</div>
-						</div>
-						<div class="col-sm-6 col-lg-4">
-							<div class="sArticalsitem"><a class="sArticalsitem__img" href="#"><img loading="lazy" src="img/@2x/sArticals-3.jpg" alt=""/><span class="sArticalsitem__date">12 февраля 2021</span></a><a class="sArticalsitem__title" href="#">Все о посудомоечной машину</a>
-								<div class="sArticalsitem__descr">Бензиновый мотобур относится к узкоспециализированным инструментам. Он применяется для бурения почвы и льда. Само по себе устройство не ново, но тем не менее на современном рынке
-								</div><a class="sArticalsitem__read-more" href="#">Читать подробнее</a>
-							</div>
-						</div>
-						<div class="col-sm-6 col-lg-4">
-							<div class="sArticalsitem"><a class="sArticalsitem__img" href="#"><img loading="lazy" src="img/@2x/sArticals-4.jpg" alt=""/><span class="sArticalsitem__date">12 февраля 2021</span></a><a class="sArticalsitem__title" href="#">Как правильно выбрать мясорубку</a>
-								<div class="sArticalsitem__descr">Бензиновый мотобур относится к узкоспециализированным инструментам. Он применяется для бурения почвы и льда. Само по себе устройство не ново, но тем не менее на современном рынке
-								</div><a class="sArticalsitem__read-more" href="#">Читать подробнее</a>
-							</div>
-						</div>
-						<div class="col-sm-6 col-lg-4">
-							<div class="sArticalsitem"><a class="sArticalsitem__img" href="#"><img loading="lazy" src="img/@2x/sArticals-5.jpg" alt=""/><span class="sArticalsitem__date">12 февраля 2021</span></a><a class="sArticalsitem__title" href="#">Как правильно выбрать холодильник</a>
-								<div class="sArticalsitem__descr">Бензиновый мотобур относится к узкоспециализированным инструментам. Он применяется для бурения почвы и льда. Само по себе устройство не ново, но тем не менее на современном рынке
-								</div><a class="sArticalsitem__read-more" href="#">Читать подробнее</a>
-							</div>
-						</div>
-						<div class="col-sm-6 col-lg-4">
-							<div class="sArticalsitem"><a class="sArticalsitem__img" href="#"><img loading="lazy" src="img/@2x/sArticals-1.jpg" alt=""/><span class="sArticalsitem__date">12 февраля 2021</span></a><a class="sArticalsitem__title" href="#">Как правильно выбрать холодильник</a>
-								<div class="sArticalsitem__descr">Бензиновый мотобур относится к узкоспециализированным инструментам. Он применяется для бурения почвы и льда. Само по себе устройство не ново, но тем не менее на современном рынке
-								</div><a class="sArticalsitem__read-more" href="#">Читать подробнее</a>
-							</div>
-						</div>
-						<div class="col-sm-6 col-lg-4">
-							<div class="sArticalsitem"><a class="sArticalsitem__img" href="#"><img loading="lazy" src="img/@2x/sArticals-1.jpg" alt=""/><span class="sArticalsitem__date">12 февраля 2021</span></a><a class="sArticalsitem__title" href="#">Как правильно выбрать холодильник</a>
-								<div class="sArticalsitem__descr">Бензиновый мотобур относится к узкоспециализированным инструментам. Он применяется для бурения почвы и льда. Само по себе устройство не ново, но тем не менее на современном рынке
-								</div><a class="sArticalsitem__read-more" href="#">Читать подробнее</a>
-							</div>
-						</div>
-						<div class="col-sm-6 col-lg-4">
-							<div class="sArticalsitem"><a class="sArticalsitem__img" href="#"><img loading="lazy" src="img/@2x/sArticals-2.jpg" alt=""/><span class="sArticalsitem__date">12 февраля 2021</span></a><a class="sArticalsitem__title" href="#">Миксеры: выбираем правильный</a>
-								<div class="sArticalsitem__descr">Бензиновый мотобур относится к узкоспециализированным инструментам. Он применяется для бурения почвы и льда. Само по себе устройство не ново, но тем не менее на современном рынке
-								</div><a class="sArticalsitem__read-more" href="#">Читать подробнее</a>
-							</div>
-						</div>
-						<div class="col-sm-6 col-lg-4">
-							<div class="sArticalsitem"><a class="sArticalsitem__img" href="#"><img loading="lazy" src="img/@2x/sArticals-3.jpg" alt=""/><span class="sArticalsitem__date">12 февраля 2021</span></a><a class="sArticalsitem__title" href="#">Все о посудомоечной машину</a>
-								<div class="sArticalsitem__descr">Бензиновый мотобур относится к узкоспециализированным инструментам. Он применяется для бурения почвы и льда. Само по себе устройство не ново, но тем не менее на современном рынке
-								</div><a class="sArticalsitem__read-more" href="#">Читать подробнее</a>
-							</div>
-						</div>
-						<div class="col-sm-6 col-lg-4">
-							<div class="sArticalsitem"><a class="sArticalsitem__img" href="#"><img loading="lazy" src="img/@2x/sArticals-4.jpg" alt=""/><span class="sArticalsitem__date">12 февраля 2021</span></a><a class="sArticalsitem__title" href="#">Как правильно выбрать мясорубку</a>
-								<div class="sArticalsitem__descr">Бензиновый мотобур относится к узкоспециализированным инструментам. Он применяется для бурения почвы и льда. Само по себе устройство не ново, но тем не менее на современном рынке
-								</div><a class="sArticalsitem__read-more" href="#">Читать подробнее</a>
-							</div>
-						</div>
-						<div class="col-sm-6 col-lg-4">
-							<div class="sArticalsitem"><a class="sArticalsitem__img" href="#"><img loading="lazy" src="img/@2x/sArticals-5.jpg" alt=""/><span class="sArticalsitem__date">12 февраля 2021</span></a><a class="sArticalsitem__title" href="#">Как правильно выбрать холодильник</a>
-								<div class="sArticalsitem__descr">Бензиновый мотобур относится к узкоспециализированным инструментам. Он применяется для бурения почвы и льда. Само по себе устройство не ново, но тем не менее на современном рынке
-								</div><a class="sArticalsitem__read-more" href="#">Читать подробнее</a>
-							</div>
-						</div>
-						<div class="col-sm-6 col-lg-4">
-							<div class="sArticalsitem"><a class="sArticalsitem__img" href="#"><img loading="lazy" src="img/@2x/sArticals-1.jpg" alt=""/><span class="sArticalsitem__date">12 февраля 2021</span></a><a class="sArticalsitem__title" href="#">Как правильно выбрать холодильник</a>
-								<div class="sArticalsitem__descr">Бензиновый мотобур относится к узкоспециализированным инструментам. Он применяется для бурения почвы и льда. Само по себе устройство не ново, но тем не менее на современном рынке
-								</div><a class="sArticalsitem__read-more" href="#">Читать подробнее</a>
-							</div>
-						</div>
-					</div>
-					<div class="sArticals__pugin-cont">
-						<div class="pagination-wrapper">
-							<ul class="page-numbers">
-										<li><span class="prev page-numbers">
-												<svg class="icon icon-chevron-left ">
-													<use xlink:href="img/svg/sprite.svg#chevron-left"></use>
-												</svg></span>
-										</li>
-										<li><span class="page-numbers current"> 1</span>
-										</li>
-										<li><a class="page-numbers" href="#">1</a>
-										</li>
-										<li><a class="page-numbers" href="#">2</a>
-										</li>
-										<li><a class="page-numbers" href="#">3</a>
-										</li>
-										<li><a class="page-numbers" href="#">4</a>
-										</li>
-								<li><span class="dots">...</span></li>
-										<li><span class="page-numbers"> 11</span>
-										</li>
-										<li><a class="next page-numbers" href="#">
-												<svg class="icon icon-chevron-right ">
-													<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
-												</svg></a>
-										</li>
-							</ul>
 						</div>
 					</div>
 				</div>
 			</div>
-			<!-- end sArticals-->
+			<!-- end sMap-->
 			<footer class="footer">
 				<div class="footer__bg"><img loading="lazy" src="img/@2x/sAbout-bg.png" alt=""/>
 				</div>
