--- a/public/013-vacancy.html
+++ b/public/013-vacancy.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title>010-articals</title>
+		<title>013-vacancy</title>
 		<meta name="description" content="о чем страница">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,  shrink-to-fit=no">
@@ -11,7 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 		<link href="css/main.min.css" rel="stylesheet"/>
 	</head>
-	<body data-bg="010.png">
+	<body data-bg="013.png">
 		<div class="main-wrapper">
 			<div class="menu-mobile menu-mobile--js d-xl-none">
 				<div class="toggle-menu-mobile toggle-menu-mobile--js"><span></span>
@@ -185,122 +185,191 @@
 					<nav>
 						<ol class="breadcrumb">
 							<li class="breadcrumb-item"><a href="/"><span>Главная</span></a></li>
-							<li class="breadcrumb-item active"><a href="#"><span>Статьи</span></a></li>
+							<li class="breadcrumb-item active"><a href="#"><span>Вакансии</span></a></li>
 						</ol>
 					</nav>
-					<h1>Статьи</h1>
+					<h1>Вакансии</h1>
 				</div>
 			</div>
-			<!--+sWarranty()-->
-			<!-- start sArticals-->
-			<div class="sArticals section" id="sArticals">
+			<!-- start sVacancy-->
+			<section class="sVacancy section" id="sVacancy">
 				<div class="container">
-					<div class="sArticals__row row">
-						<div class="col-sm-6 col-lg-4">
-							<div class="sArticalsitem"><a class="sArticalsitem__img" href="#"><img loading="lazy" src="img/@2x/sArticals-1.jpg" alt=""/><span class="sArticalsitem__date">12 февраля 2021</span></a><a class="sArticalsitem__title" href="#">Как правильно выбрать холодильник</a>
-								<div class="sArticalsitem__descr">Бензиновый мотобур относится к узкоспециализированным инструментам. Он применяется для бурения почвы и льда. Само по себе устройство не ново, но тем не менее на современном рынке
-								</div><a class="sArticalsitem__read-more" href="#">Читать подробнее</a>
+					<div class="sVacancy__row row">
+						<div class="col">
+							<div class="sVacancy__items">
+								<div class="sVacancy__item"><a class="sVacancy__title" href="#">Продавец-консультант в торговый зал</a>
+									<div class="sVacancy__salary"><b>Заработная плата:</b><span>не указана</span>
+									</div>
+									<div class="sVacancy__duty-txt">Обязанности:
+									</div>
+									<ul class="sVacancy__duty-list">
+										<li>Организация и контроль работы склада по приему, хранению и отпуску товаров, по их размещению с учетом наиболее рационального использования складских площадей;</li>
+										<li>Ведение бюджета по доставкам</li>
+										<li>Обработка рекламаций, выставление претензий, отправка рекламационных тмц.</li>
+										<li>Контроль актуальности доставки тмц в дальние регионы</li>
+										<li>Учет и контроль процессов поставки товара на склад;</li>
+										<li>Обеспечение сохранности складируемых товарно-материальных ценностей;</li>
+									</ul>
+									<div class="sVacancy__gray-row row">
+										<div class="col-auto">
+											<div class="sVacancy__g-txt">г. Подольск
+											</div>
+										</div>
+										<div class="col-auto">
+											<div class="sVacancy__g-txt">Дата размещения вакансии: 15 июня 2021
+											</div>
+										</div>
+									</div><a class="sVacancy__callback-btn" href="#">Откликнуться</a>
+								</div>
+								<div class="sVacancy__item"><a class="sVacancy__title" href="#">Охранник в Шоурум</a>
+									<div class="sVacancy__salary"><b>Заработная плата:</b><span>не указана</span>
+									</div>
+									<div class="sVacancy__duty-txt">Обязанности:
+									</div>
+									<ul class="sVacancy__duty-list">
+										<li>Организация и контроль работы склада по приему, хранению и отпуску товаров, по их размещению с учетом наиболее рационального использования складских площадей;</li>
+										<li>Ведение бюджета по доставкам</li>
+										<li>Обработка рекламаций, выставление претензий, отправка рекламационных тмц.</li>
+										<li>Контроль актуальности доставки тмц в дальние регионы</li>
+										<li>Учет и контроль процессов поставки товара на склад;</li>
+										<li>Обеспечение сохранности складируемых товарно-материальных ценностей;</li>
+									</ul>
+									<div class="sVacancy__gray-row row">
+										<div class="col-auto">
+											<div class="sVacancy__g-txt">г. Подольск
+											</div>
+										</div>
+										<div class="col-auto">
+											<div class="sVacancy__g-txt">Дата размещения вакансии: 15 июня 2021
+											</div>
+										</div>
+									</div><a class="sVacancy__callback-btn" href="#">Откликнуться</a>
+								</div>
+								<div class="sVacancy__item"><a class="sVacancy__title" href="#">Старший кассир</a>
+									<div class="sVacancy__salary"><b>Заработная плата:</b><span>от 100 000 рублей</span>
+									</div>
+									<div class="sVacancy__duty-txt">Обязанности:
+									</div>
+									<ul class="sVacancy__duty-list">
+										<li>Организация и контроль работы склада по приему, хранению и отпуску товаров, по их размещению с учетом наиболее рационального использования складских площадей;</li>
+										<li>Ведение бюджета по доставкам</li>
+										<li>Обработка рекламаций, выставление претензий, отправка рекламационных тмц.</li>
+										<li>Контроль актуальности доставки тмц в дальние регионы</li>
+										<li>Учет и контроль процессов поставки товара на склад;</li>
+										<li>Обеспечение сохранности складируемых товарно-материальных ценностей;</li>
+									</ul>
+									<div class="sVacancy__gray-row row">
+										<div class="col-auto">
+											<div class="sVacancy__g-txt">г. Подольск
+											</div>
+										</div>
+										<div class="col-auto">
+											<div class="sVacancy__g-txt">Дата размещения вакансии: 15 июня 2021
+											</div>
+										</div>
+									</div><a class="sVacancy__callback-btn" href="#">Откликнуться</a>
+								</div>
+								<div class="sVacancy__item"><a class="sVacancy__title" href="#">Менеджер</a>
+									<div class="sVacancy__salary"><b>Заработная плата:</b><span>не указана</span>
+									</div>
+									<div class="sVacancy__duty-txt">Обязанности:
+									</div>
+									<ul class="sVacancy__duty-list">
+										<li>Организация и контроль работы склада по приему, хранению и отпуску товаров, по их размещению с учетом наиболее рационального использования складских площадей;</li>
+										<li>Ведение бюджета по доставкам</li>
+										<li>Обработка рекламаций, выставление претензий, отправка рекламационных тмц.</li>
+										<li>Контроль актуальности доставки тмц в дальние регионы</li>
+										<li>Учет и контроль процессов поставки товара на склад;</li>
+										<li>Обеспечение сохранности складируемых товарно-материальных ценностей;</li>
+									</ul>
+									<div class="sVacancy__gray-row row">
+										<div class="col-auto">
+											<div class="sVacancy__g-txt">г. Подольск
+											</div>
+										</div>
+										<div class="col-auto">
+											<div class="sVacancy__g-txt">Дата размещения вакансии: 15 июня 2021
+											</div>
+										</div>
+									</div><a class="sVacancy__callback-btn" href="#">Откликнуться</a>
+								</div>
 							</div>
 						</div>
-						<div class="col-sm-6 col-lg-4">
-							<div class="sArticalsitem"><a class="sArticalsitem__img" href="#"><img loading="lazy" src="img/@2x/sArticals-2.jpg" alt=""/><span class="sArticalsitem__date">12 февраля 2021</span></a><a class="sArticalsitem__title" href="#">Миксеры: выбираем правильный</a>
-								<div class="sArticalsitem__descr">Бензиновый мотобур относится к узкоспециализированным инструментам. Он применяется для бурения почвы и льда. Само по себе устройство не ново, но тем не менее на современном рынке
-								</div><a class="sArticalsitem__read-more" href="#">Читать подробнее</a>
+						<div class="sVacancy__filter-col col-lg-4 col-xl-3">
+							<div class="sVacancy__filter">
+								<label class="sVacancy__label">
+									<input class="invisible" type="radio" name="sVacancy-filter" val="Все вакансии" checked="checked"/>
+									<div class="sVacancy__txt">Все вакансии</div>
+								</label>
+								<label class="sVacancy__label">
+									<input class="invisible" type="radio" name="sVacancy-filter" val="Административный персонал"/>
+									<div class="sVacancy__txt">Административный персонал</div>
+								</label>
+								<label class="sVacancy__label">
+									<input class="invisible" type="radio" name="sVacancy-filter" val="Бухгалтерия, управленческий учет и пр."/>
+									<div class="sVacancy__txt">Бухгалтерия, управленческий учет и пр.</div>
+								</label>
+								<label class="sVacancy__label">
+									<input class="invisible" type="radio" name="sVacancy-filter" val="Высший менеджмент"/>
+									<div class="sVacancy__txt">Высший менеджмент</div>
+								</label>
+								<label class="sVacancy__label">
+									<input class="invisible" type="radio" name="sVacancy-filter" val="Закупки"/>
+									<div class="sVacancy__txt">Закупки</div>
+								</label>
+								<label class="sVacancy__label">
+									<input class="invisible" type="radio" name="sVacancy-filter" val="Интернет-магазин"/>
+									<div class="sVacancy__txt">Интернет-магазин</div>
+								</label>
+								<label class="sVacancy__label">
+									<input class="invisible" type="radio" name="sVacancy-filter" val="Логистика"/>
+									<div class="sVacancy__txt">Логистика</div>
+								</label>
 							</div>
-						</div>
-						<div class="col-sm-6 col-lg-4">
-							<div class="sArticalsitem"><a class="sArticalsitem__img" href="#"><img loading="lazy" src="img/@2x/sArticals-3.jpg" alt=""/><span class="sArticalsitem__date">12 февраля 2021</span></a><a class="sArticalsitem__title" href="#">Все о посудомоечной машину</a>
-								<div class="sArticalsitem__descr">Бензиновый мотобур относится к узкоспециализированным инструментам. Он применяется для бурения почвы и льда. Само по себе устройство не ново, но тем не менее на современном рынке
-								</div><a class="sArticalsitem__read-more" href="#">Читать подробнее</a>
-							</div>
-						</div>
-						<div class="col-sm-6 col-lg-4">
-							<div class="sArticalsitem"><a class="sArticalsitem__img" href="#"><img loading="lazy" src="img/@2x/sArticals-4.jpg" alt=""/><span class="sArticalsitem__date">12 февраля 2021</span></a><a class="sArticalsitem__title" href="#">Как правильно выбрать мясорубку</a>
-								<div class="sArticalsitem__descr">Бензиновый мотобур относится к узкоспециализированным инструментам. Он применяется для бурения почвы и льда. Само по себе устройство не ново, но тем не менее на современном рынке
-								</div><a class="sArticalsitem__read-more" href="#">Читать подробнее</a>
-							</div>
-						</div>
-						<div class="col-sm-6 col-lg-4">
-							<div class="sArticalsitem"><a class="sArticalsitem__img" href="#"><img loading="lazy" src="img/@2x/sArticals-5.jpg" alt=""/><span class="sArticalsitem__date">12 февраля 2021</span></a><a class="sArticalsitem__title" href="#">Как правильно выбрать холодильник</a>
-								<div class="sArticalsitem__descr">Бензиновый мотобур относится к узкоспециализированным инструментам. Он применяется для бурения почвы и льда. Само по себе устройство не ново, но тем не менее на современном рынке
-								</div><a class="sArticalsitem__read-more" href="#">Читать подробнее</a>
-							</div>
-						</div>
-						<div class="col-sm-6 col-lg-4">
-							<div class="sArticalsitem"><a class="sArticalsitem__img" href="#"><img loading="lazy" src="img/@2x/sArticals-1.jpg" alt=""/><span class="sArticalsitem__date">12 февраля 2021</span></a><a class="sArticalsitem__title" href="#">Как правильно выбрать холодильник</a>
-								<div class="sArticalsitem__descr">Бензиновый мотобур относится к узкоспециализированным инструментам. Он применяется для бурения почвы и льда. Само по себе устройство не ново, но тем не менее на современном рынке
-								</div><a class="sArticalsitem__read-more" href="#">Читать подробнее</a>
-							</div>
-						</div>
-						<div class="col-sm-6 col-lg-4">
-							<div class="sArticalsitem"><a class="sArticalsitem__img" href="#"><img loading="lazy" src="img/@2x/sArticals-1.jpg" alt=""/><span class="sArticalsitem__date">12 февраля 2021</span></a><a class="sArticalsitem__title" href="#">Как правильно выбрать холодильник</a>
-								<div class="sArticalsitem__descr">Бензиновый мотобур относится к узкоспециализированным инструментам. Он применяется для бурения почвы и льда. Само по себе устройство не ново, но тем не менее на современном рынке
-								</div><a class="sArticalsitem__read-more" href="#">Читать подробнее</a>
-							</div>
-						</div>
-						<div class="col-sm-6 col-lg-4">
-							<div class="sArticalsitem"><a class="sArticalsitem__img" href="#"><img loading="lazy" src="img/@2x/sArticals-2.jpg" alt=""/><span class="sArticalsitem__date">12 февраля 2021</span></a><a class="sArticalsitem__title" href="#">Миксеры: выбираем правильный</a>
-								<div class="sArticalsitem__descr">Бензиновый мотобур относится к узкоспециализированным инструментам. Он применяется для бурения почвы и льда. Само по себе устройство не ново, но тем не менее на современном рынке
-								</div><a class="sArticalsitem__read-more" href="#">Читать подробнее</a>
-							</div>
-						</div>
-						<div class="col-sm-6 col-lg-4">
-							<div class="sArticalsitem"><a class="sArticalsitem__img" href="#"><img loading="lazy" src="img/@2x/sArticals-3.jpg" alt=""/><span class="sArticalsitem__date">12 февраля 2021</span></a><a class="sArticalsitem__title" href="#">Все о посудомоечной машину</a>
-								<div class="sArticalsitem__descr">Бензиновый мотобур относится к узкоспециализированным инструментам. Он применяется для бурения почвы и льда. Само по себе устройство не ново, но тем не менее на современном рынке
-								</div><a class="sArticalsitem__read-more" href="#">Читать подробнее</a>
-							</div>
-						</div>
-						<div class="col-sm-6 col-lg-4">
-							<div class="sArticalsitem"><a class="sArticalsitem__img" href="#"><img loading="lazy" src="img/@2x/sArticals-4.jpg" alt=""/><span class="sArticalsitem__date">12 февраля 2021</span></a><a class="sArticalsitem__title" href="#">Как правильно выбрать мясорубку</a>
-								<div class="sArticalsitem__descr">Бензиновый мотобур относится к узкоспециализированным инструментам. Он применяется для бурения почвы и льда. Само по себе устройство не ново, но тем не менее на современном рынке
-								</div><a class="sArticalsitem__read-more" href="#">Читать подробнее</a>
-							</div>
-						</div>
-						<div class="col-sm-6 col-lg-4">
-							<div class="sArticalsitem"><a class="sArticalsitem__img" href="#"><img loading="lazy" src="img/@2x/sArticals-5.jpg" alt=""/><span class="sArticalsitem__date">12 февраля 2021</span></a><a class="sArticalsitem__title" href="#">Как правильно выбрать холодильник</a>
-								<div class="sArticalsitem__descr">Бензиновый мотобур относится к узкоспециализированным инструментам. Он применяется для бурения почвы и льда. Само по себе устройство не ново, но тем не менее на современном рынке
-								</div><a class="sArticalsitem__read-more" href="#">Читать подробнее</a>
-							</div>
-						</div>
-						<div class="col-sm-6 col-lg-4">
-							<div class="sArticalsitem"><a class="sArticalsitem__img" href="#"><img loading="lazy" src="img/@2x/sArticals-1.jpg" alt=""/><span class="sArticalsitem__date">12 февраля 2021</span></a><a class="sArticalsitem__title" href="#">Как правильно выбрать холодильник</a>
-								<div class="sArticalsitem__descr">Бензиновый мотобур относится к узкоспециализированным инструментам. Он применяется для бурения почвы и льда. Само по себе устройство не ново, но тем не менее на современном рынке
-								</div><a class="sArticalsitem__read-more" href="#">Читать подробнее</a>
-							</div>
-						</div>
-					</div>
-					<div class="sArticals__pugin-cont">
-						<div class="pagination-wrapper">
-							<ul class="page-numbers">
-										<li><span class="prev page-numbers">
-												<svg class="icon icon-chevron-left ">
-													<use xlink:href="img/svg/sprite.svg#chevron-left"></use>
-												</svg></span>
-										</li>
-										<li><span class="page-numbers current"> 1</span>
-										</li>
-										<li><a class="page-numbers" href="#">1</a>
-										</li>
-										<li><a class="page-numbers" href="#">2</a>
-										</li>
-										<li><a class="page-numbers" href="#">3</a>
-										</li>
-										<li><a class="page-numbers" href="#">4</a>
-										</li>
-								<li><span class="dots">...</span></li>
-										<li><span class="page-numbers"> 11</span>
-										</li>
-										<li><a class="next page-numbers" href="#">
-												<svg class="icon icon-chevron-right ">
-													<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
-												</svg></a>
-										</li>
-							</ul>
 						</div>
 					</div>
 				</div>
-			</div>
-			<!-- end sArticals-->
+			</section>
+			<!-- end sVacancy-->
+			<!-- start sForm-->
+			<section class="sForm sForm--alt section" id="sForm">
+				<div class="container">
+					<div class="sForm__box sForm__box--alt">
+						<div class="sForm__bg"><img loading="lazy" src="img/@2x/sAbout-bg.png" alt=""/>
+						</div>
+						<div class="section-title">
+							<h2>Заинтересовала вакансия?</h2>
+							<p>Свяжись с нами, заполнив форму. Мы перезвоним тебе и все обсудим!</p>
+						</div>
+						<div class="form-wrap">
+							<form>
+								<div class="form-wrap__row form-wrap__row--alt row">
+									<div class="form-wrap__inp-col col-md-6 col-lg-auto">
+										<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="Ваше имя"/>
+										</div>
+										<!-- +e.input-wrap-->
+									</div>
+									<div class="form-wrap__inp-col col-md-6 col-lg-auto">
+										<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="Ваш телефон"/>
+										</div>
+										<!-- +e.input-wrap-->
+									</div>
+									<div class="col-lg">
+										<button class="form-wrap__btn" type="submit">написать нам
+										</button>
+									</div>
+								</div>
+								<div class="form-wrap__policy form-wrap__policy--mh0">
+									<div class="form-wrap__p-txt">
+										Мы безопасно храним данные и никому их не передаём, вот
+										<a href="#">условия.</a>
+									</div>
+								</div>
+							</form>
+						</div>
+					</div>
+				</div>
+			</section>
 			<footer class="footer">
 				<div class="footer__bg"><img loading="lazy" src="img/@2x/sAbout-bg.png" alt=""/>
 				</div>
