--- a/public/01-about.html
+++ b/public/01-about.html
@@ -51,7 +51,7 @@
 			</div>
 			<!--  мобильное меню-->
 			<!-- start header-->
-			<header class="header" id="header">
+			<header class="header header--js" id="header">
 				<!-- start topLine-->
 				<div class="topLine d-none d-xl-block" id="topLine">
 					<div class="container">
@@ -178,6 +178,24 @@
 						</div>
 					</div>
 				</div>
+				<div class="catalog-dd">
+					<div class="container">
+						<div class="catalog-dd__row tabs">
+							<div class="catalog-dd__caption-col col-lg-3 tabs__caption">
+								<div class="tabs__btn active"></div>
+								<div class="tabs__btn"></div>
+								<div class="tabs__btn"></div>
+								<div class="tabs__btn"></div>
+							</div>
+							<div class="col-lg tabs__wrap">
+								<div class="tabs__content active"></div>
+								<div class="tabs__content"></div>
+								<div class="tabs__content"></div>
+								<div class="tabs__content"></div>
+							</div>
+						</div>
+					</div>
+				</div>
 			</header>
 			<!-- end header-->
 			<!-- start sAbout-->
@@ -203,7 +221,7 @@
 							</div><a class="sAbout__message-btn" href="#">написать нам</a>
 						</div>
 					</div>
-					<div class="sAbout__img"><img loading="lazy" src="img/@2x/sAbout-baner.png" alt=""/>
+					<div class="sAbout__img"><img loading="lazy" src="img/@2x/sAbout-baner.jpg" alt=""/>
 					</div>
 					<div class="sAbout__pills-row row">
 						<div class="col-sm-6 col-lg-3">
