--- a/public/010-articals.html
+++ b/public/010-articals.html
@@ -51,7 +51,7 @@
 			</div>
 			<!--  мобильное меню-->
 			<!-- start header-->
-			<header class="header" id="header">
+			<header class="header header--js" id="header">
 				<!-- start topLine-->
 				<div class="topLine d-none d-xl-block" id="topLine">
 					<div class="container">
@@ -174,6 +174,24 @@
 								</div>
 							</div>
 							<div class="col-auto d-none d-md-block"><a class="brands__all-link" href="#">все бренды</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="catalog-dd">
+					<div class="container">
+						<div class="catalog-dd__row tabs">
+							<div class="catalog-dd__caption-col col-lg-3 tabs__caption">
+								<div class="tabs__btn active"></div>
+								<div class="tabs__btn"></div>
+								<div class="tabs__btn"></div>
+								<div class="tabs__btn"></div>
+							</div>
+							<div class="col-lg tabs__wrap">
+								<div class="tabs__content active"></div>
+								<div class="tabs__content"></div>
+								<div class="tabs__content"></div>
+								<div class="tabs__content"></div>
 							</div>
 						</div>
 					</div>
